<b><u> v2.18, 15.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Completly rewrite and overhaul the ObjectiveTracker Skin. (Still WIP)
<font color=#FF8C00>&#9830;</font> Add a bossEmote frame. (WIP)
<font color=#FF8C00>&#9830;</font> Adjust spell ID for Dalaran Teleport/Portal in the LocPanel.
<font color=#FF8C00>&#9830;</font> Some layout adjustments.

<b><u> v2.17, 11.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add BigWigs settings to my install.
<font color=#FF8C00>&#9830;</font> Add option to hide the Zone Text in OrderHall CommandBar.
<font color=#FF8C00>&#9830;</font> More work on the ObjectiveTracker.
<font color=#FF8C00>&#9830;</font> Hide the currency text and icon, since i'm using the orderhall datatext.
<font color=#FF8C00>&#9830;</font> Update the quest skin.
<font color=#FF8C00>&#9830;</font> Update the LocPanel. It should now register clicks properly.
<font color=#FF8C00>&#9830;</font> Fix a incompatibly with ElvUI_Enhanced.

<b><u> v2.16, 05.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Revert changes to the Chat Tab.
<font color=#FF8C00>&#9830;</font> Add own skin for Oderhall CommandBar. It's movable now.
<font color=#FF8C00>&#9830;</font> More work on the ObjectiveTracker. The error with the UI to hide should be fixed. Still a tain left.

<b><u> v2.15.1, 04.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Disabled ObjectiveTracker skin, it caused the UI hide. -.-

<b><u> v2.15, 04.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Change Tooltip font.
<font color=#FF8C00>&#9830;</font> Update the ObjectiveTracker skin.
<font color=#FF8C00>&#9830;</font> Add new bank/bag mover to install.
<font color=#FF8C00>&#9830;</font> Add "Flight Masters's Whistle" to the LocPanel teleport menu.
<font color=#FF8C00>&#9830;</font> Add a new Chat Tab for whispers. Do the install for Chat again.

<b><u> v2.14, 29.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Rearrange customTexts in install.